--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <div class="nav-links">
             <div class="crossIcon"><i class="fa fa-times" onclick="hideMenu()"></i></div>
             <ul>
-                <li><a href="/index.html">HOME</a></li>
-                <li><a href="/about.html">ABOUT</a></li>
-                <li><a href="/course.html">COURSE</a></li>                
-                <li><a href="/news.html">NEWS</a></li>                
-                <li><a href="/contact.html">CONTACT</a></li>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="about.html">ABOUT</a></li>
+                <li><a href="course.html">COURSE</a></li>                
+                <li><a href="news.html">NEWS</a></li>                
+                <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </div>
         <div class="menuIcon"><i class="fa-solid fa-bars" onclick="showMenu()"></i></div>
