--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/9e6458a46d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
+    <base href="https://ellawsm.github.io/best_univeristy/">
     <title>Best University</title>
 </head>
 <body>
