--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li><a href="about.html">ABOUT</a></li>
                 <li><a href="course.html">COURSE</a></li>                
                 <li><a href="news.html">NEWS</a></li>                
-                <li><a href="bcontact.html">CONTACT</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </div>
         <div class="menuIcon"><i class="fa-solid fa-bars" onclick="showMenu()"></i></div>
