--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 <body>
     <section class="aboutUsHeader">
         <nav>
-        <a href="/index.html"><img src="images/logo.png" alt="Univerisity" class="logo"></a>
+        <a href="index.html"><img src="images/logo.png" alt="Univerisity" class="logo"></a>
         <div class="nav-links">
             <div class="crossIcon"><i class="fa fa-times" onclick="hideMenu()"></i></div>
             <ul>
