--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="headerText">
             <h1>World's Best University</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent posuere ac nulla at consectetur. Curabitur ultrices a dui at venenatis.</p>
-            <a class='hero-btn'href="">Visit Us to Know More</a>
+            <a class='hero-btn'href="about.html">Visit Us to Know More</a>
         </div>
     </section>
 
@@ -138,7 +138,7 @@
     <!-- Call to Action -->
     <section class="callToAction">
         <h1>Enroll For Our Various Online Courses <br>Anywhere From the World</h1>
-        <a href="" class="hero-btn">CONTACT US</a>
+        <a href="contact.html" class="hero-btn">CONTACT US</a>
     </section>
     <!-- Footer -->
     <section class="footer">
